<resources>
    <string name="app_name">FavorMovie</string>
    <string name="go_to_nmoviedetailsactivity">Go to\nMovieDetailsActivity</string>
    <string name="top_view_file_picture_movie_details">Top view file picture</string>
    <string name="back">Back</string>
    <string name="age_restriction">13+</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="back_arrow">Back arrow</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="story_movies">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.
</string>
    <string name="cast">Cast</string>
    <string name="actor_name">Actor name</string>
    <string name="actor_foto">Actor foto</string>
    <string name="robert_downey">Robert Downey Jr.</string>
    <string name="chris_evans">Chris  Evans</string>
    <string name="mark_ruffalo">Mark  Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="number_of_view">125 Reviews</string>
    <string name="avengers_nend_game">Avengers:\nEnd Game</string>
    <string name="movies_list">Movies list</string>
    <string name="avengers_end_game2">Avengers: End Game</string>

</resources>