<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_background"
        android:paddingBottom="@dimen/margin_8x"
        tools:context=".MovieDetailsActivity">


        <ImageView
            android:id="@+id/ivBackdropMoviePath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/top_view_file_picture_movie_details"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/GuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/film_pick" />


        <View
            android:id="@+id/vMack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/top_mask"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackdropMoviePath"
            app:layout_constraintEnd_toEndOf="@+id/ivBackdropMoviePath"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ivBackdropMoviePath"
            app:layout_constraintTop_toTopOf="@+id/ivBackdropMoviePath"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/GuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003" />

        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x"
            android:layout_marginTop="59dp"
            android:contentDescription="@string/back_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackdropMoviePath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBackdropMoviePath"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/back_array" />

        <TextView
            android:id="@+id/tvMoveBack"
            style="@style/textWhiteStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:alpha="0.5"
            android:text="@string/back"
            android:textAppearance="@style/textWhiteStyle"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackArrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivBackArrow"
            app:layout_constraintTop_toTopOf="@+id/ivBackArrow" />

        <TextView
            android:id="@+id/tvAgeCategory"
            style="@style/textWhiteStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x"
            android:layout_marginTop="226dp"
            android:elevation="@dimen/margin_2x"
            android:gravity="center"
            android:text="@string/age_restriction"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/GuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBackdropMoviePath"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvOriginalTitle"
            style="@style/textWhiteStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:letterSpacing="-0.01"
            android:shadowColor="@color/shadow_color"
            android:text="@string/avengers_nend_game"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeCategory"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvGenres"
            style="@style/tagStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginEnd="@dimen/margin_4x"
            android:text="@string/action_adventure_fantasy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitle"
            app:layout_constraintVertical_bias="0.0" />

        <RatingBar
            android:id="@+id/rbVoteAverage"
            style="@android:style/Widget.Holo.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:progressBackgroundTint="@android:color/holo_orange_light"
            android:progressTint="@color/taglineColor"
            android:rating="4.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvVoteCount"
            style="@style/textDefStyle"
            android:layout_width="123dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:text="@string/number_of_view"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rbVoteAverage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rbVoteAverage"
            app:layout_constraintTop_toTopOf="@+id/rbVoteAverage" />

        <TextView
            android:id="@+id/tvStoryLine"
            style="@style/textWhiteStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x"
            android:layout_marginTop="@dimen/margin_4x"
            android:layout_marginEnd="@dimen/margin_4x"
            android:text="@string/storyline"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteCount"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvOverview"
            style="@style/textDefStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.75"
            android:lineSpacingExtra="4sp"
            android:text="@string/story_movies"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStoryLine"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/tvCastHeader"
            style="@style/textWhiteStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/flActorsRecycleView"
            android:layout_width="0dp"
            android:layout_height="118dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/blue_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCastHeader"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:reverseLayout="true">

            </androidx.recyclerview.widget.RecyclerView>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>